# CLion_HugeNumberCalculator

./: CMakeLists.txt  README.md  ScanHugeNumber.h  main.c
IHMHHugeNumber/: ShowHugeNumber.h
